[package]
name = "gh-logs-grab"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "cargo"] }
futures = "0.3"
chrono = "0.4"
regex = "1"
rayon = "1"
